<resources>
    <string name="app_name">MuscleMax-App</string>
    <string name="navigation_open">open</string>
    <string name="navigation_close">close</string>
    <string name="muscle_max">MUSCLE MAX</string>
    <string name="user">User</string>
    <string name="sign_in_text_btn">Sign In</string>
    <string name="signup_message">Don\'t have an account?</string>
    <string name="sign_up_text_btn">Sign Up</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="btn_login">Sign In</string>
    <string name="login_message">Already have an account?</string>
    <string name="re_type_password">re-type password</string>
    <string name="second_name">Last name</string>
    <string name="first_name">First name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="map_navigation_item">Gyms Near You</string>
    <string name="_1unit_s">1unit(s)</string>
    <string name="something_went_wrong">Sorry. Something went wrong.</string>
    <string name="gym">gym</string>
    <string name="more_details">more_details</string>
    <string name="search">Search</string>
    <string name="_results">results</string>
    <string name="_0">0</string>
    <string name="entries">entries</string>
    <string name="results">Results</string>
    <string name="some_location">Some Location</string>
    <string name="person">person</string>
    <string name="location">location</string>
    <string name="retry">retry</string>
    <string name="back">back</string>
    <string name="request_sent">Request Sent</string>
    <string name="call">Call</string>
    <string name="go">Go</string>
    <string name="reviews">Reviews</string>
    <string name="view_all">view all</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="someone">Someone</string>
    <string name="add">add</string>
    <string name="rate_gym">Rate Gym</string>
    <string name="tags">Tags</string>
    <string name="no_google_maps">You do not have google maps installed. Please install it first.</string>
    <string name="add_a_tag">Add a tag</string>
    <string name="tag_name_hint">Name</string>
    <string name="tag_description_hint">Description</string>
    <string name="tag_color_hint">Colour</string>
    <string name="pick_a_color">Pick a colour</string>
    <string name="tags_navigation_item">Tags</string>
    <string name="settings_navigation_item">Settings</string>
    <string name="logout_navigation_item">Logout</string>
    <string name="add_a_review">Add a review</string>
    <string name="successfully_updated">Successfully Updated</string>
    <string name="your_tags">Your tags</string>

    <!--Personal Details-->
    <string name="personal_details_heading">Lets get a few details.</string>
    <string name="personal_details_subtitle">Personal Details</string>
    <string name="activity_gauge_subtitle">Activity Gauge</string>
    <string name="activity_gauge_explanation">The activity gauge us how active you are
    in your daily routines. By setting your activity gauge you help us adjust to your needs</string>
    <string name="fullname_txt">Your full name</string>
    <string name="Age_txt">Your age</string>
    <string name="gender_txt">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="actvity_gauge_hint">Choose how active you are:</string>
    <string name="google_sign_in_success_more_info">You have been signed in by Google successfully. We just need a few more details.</string>
    <string name="facebook_sign_in_success_more_info">You have been signed in by Facebook successfully. We just need a few more details.</string>

    <!--Weight Details-->
    <string name="weight_details_heading">What about your current weight?</string>
    <string name="weight_details_subtitle">Weight Details</string>
    <string name="your_weight">Your weight</string>
    <string name="weight_goals_subtitle">Weight Goals</string>
    <string name="weight_goal_explanation">Weight goals help keep track of your weight goals and enrich the apps usage</string>
    <string name="weight_goal_choice_hint">Choose a Goal:</string>
    <string name="weight_target_hint">Add a weight target:</string>
    <string name="weight_target_explanation">Set a target for a more enriching experience</string>
    <string name="weight_height_hint">0</string>
    <string name="kg_s">kg(s)</string>
    <string name="weight_input_hint">Add your weight:</string>

    <!--Height Details-->
    <string name="height_details_heading">Add your height too.</string>
    <string name="height_details_subtitle">Height Details</string>
    <string name="height_input_hint">Add your height:</string>
    <string name="ft">ft</string>

    <!--Details Overview-->
    <string name="details_overview_heading">Is this correct?</string>
    <string name="details_overview_subheading">Details Overview</string>
    <string name="fullname_test">ERICK NJIRU KIRABUI</string>
    <string name="full_name">Full name</string>
    <string name="DOB_test">2000–11–11</string>
    <string name="weight_test">120 lb</string>
    <string name="height_test">120 ft</string>
    <string name="curent_weight">Current Weight</string>
    <string name="current_height">Current Height</string>
    <string name="gender_test">Male</string>
    <string name="gender">Gender</string>
    <string name="age_test">24</string>
    <string name="age">Age</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="locate_your_home_town">Locate your home town</string>
    <string name="lastname">Last name</string>
    <string name="your_email">Your Email</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="Re_type_password">Re-type password</string>
    <string name="profile_pic">Profile picture</string>
    <string name="btn_add_later">ADD LATER</string>
    <string name="finish">FINISH</string>
    <string name="location_details_heading">Lets get your home address</string>
    <string name="current_location">Current Location</string>
    <string name="google_services_error">You do not have Google Services installed. This application cannot function without it.</string>
    <string name="search_hint">Search addresses, cities or zip codes</string>
    <string name="search_hint_2">Search location</string>

    <!--FACE BOOK-->
    <string name="facebook_app_id">1726822424039436</string>
    <string name="fb_login_protocol_scheme">fb1726822424039436</string>


    <string name="facebook">FACEBOOK</string>
    <string name="google">GOOGLE</string>
    <string name="home">Home</string>
    <string name="Tel">Tel</string>
    <string name="rate_coach">Rate Coach</string>
    <string name="coach_navigation_item">Coaches</string>
    <string name="gym_navigation_item">Our Gyms</string>
    <string name="app_invites_navigation_item">Find or Invite a friend</string>
    <string name="your_profile">Your Profile</string>
    <string name="initial_height">initial_height</string>
    <string name="initial_weight">initial_weight</string>
    <string name="no_reviews_yet">NO REVIEWS YET</string>
    <string name="no_tags_yet">NO TAGS YET</string>
    <string name="click_the_button_to_add_your_own">Click the + button to add your own.</string>
    <string name="user_profile_navigation_item">Your Profile</string>
    <string name="action_search">Search</string>
    <string name="search_distance">Search distance:</string>
    <string name="we_dont_have_permission">We don\'t have permission</string>
    <string name="we_need_permission_to_function">In order continue, please grant us the required permissions</string>
    <string name="permissions_granted">Permissions granted</string>
</resources>
