<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@id/MapFragment"
            android:title="@string/map_navigation_item"
            android:icon="@drawable/ic_location_black" />

        <item
            android:id="@id/CoachOverviewFragment"
            android:title="@string/coach_navigation_item"
            android:icon="@drawable/ic_coach" />

        <item
            android:id="@id/GymsOverviewFragment"
            android:title="@string/gym_navigation_item"
            android:icon="@drawable/ic_gym_black" />

    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@id/UserProfileFragment"
            android:title="@string/user_profile_navigation_item"
            android:icon="@drawable/ic_person_black_24dp" />
        <item
            android:id="@id/TagsFragment"
            android:title="@string/tags_navigation_item"
            android:icon="@drawable/ic_tags" />
        <item
            android:id="@+id/settings_menu_item"
            android:title="@string/settings_navigation_item"
            android:icon="@drawable/ic_settings_white_24dp"/>
        <item
            android:id="@+id/logout_menu_item"
            android:title="@string/logout_navigation_item"
            android:icon="@drawable/ic_logout"/>
    </group>
</menu>