<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.landingPage.AuthLandingPageFragment"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="bottom"
    android:background="@color/bg_dark">

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:text="@string/sign_in_text_btn"
        android:background="@drawable/primary_btn"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/signup_message"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:text="@string/sign_up_text_btn"
        android:background="@drawable/colourless_btn"
        android:textColor="@color/bg_dark"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="Or sign up with"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dp"
            android:background="@color/facebook_color"
            android:text="@string/facebook"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"/>

        <Button
            android:id="@+id/btn_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/google_color"
            android:text="@string/google"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>

</LinearLayout>