<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.auth.signup.SignUpFragment">
    <data class="SignUpBinding">
        <variable
            name="viewModel"
            type="com.flycode.musclemax_app.ui.auth.signup.SignUpViewModel"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/profile_pic_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center_horizontal">

                        <ImageView
                            android:id="@+id/profile_pic"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:src="@{viewModel.profilePic}"
                            android:clickable="true"
                            android:contentDescription="Profile pic" />

                        <ProgressBar
                            android:id="@+id/profile_pic_progress_bar"
                            style="?android:attr/progressBarStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:visibility="gone" />
                    </FrameLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Pick a profile picture"/>
                </LinearLayout>

                <!--Firstname-->
                <EditText
                    android:id="@+id/tv_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/first_name"
                    android:text="@={viewModel.user.firstname}"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textSize="20sp" />

                <!--Lastname-->
                <EditText
                    android:id="@+id/tv_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/second_name"
                    android:text="@={viewModel.user.lastname}"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textSize="20sp" />


                <!--email-->
                <EditText
                    android:id="@+id/tv_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/email"
                    android:text="@={viewModel.user.email}"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textSize="20sp" />

                <!--password-->
                <EditText
                    android:id="@+id/tv_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/password"
                    android:text="@={viewModel.user.password}"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textSize="20sp" />

                <!--retype password-->
                <EditText
                    android:id="@+id/tv_password_retype"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/re_type_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textSize="20sp" />

            </LinearLayout>

            <Button
                android:id="@+id/sign_up_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:text="@string/sign_up_text_btn"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="0dp"
                    android:text="@string/login_message"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/sign_in_text_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="0dp"
                    android:paddingLeft="10dp"
                    android:text="@string/sign_in_text_btn"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>
