<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/bottom_sheet_details"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="10dp"
        android:orientation="horizontal"
        android:background="@color/colorWhite"
        android:visibility="visible">

        <com.github.siyamed.shapeimageview.CircularImageView
            android:id="@+id/im_picture"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="15dp"
            android:layout_gravity="start|center_vertical"
            android:contentDescription="@string/gym"
            android:src="@drawable/image_placeholder"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NorthSide Gym"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textStyle="bold"
                android:maxLines="1" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/some_location"
                android:textColor="@color/colorDarkGray"
                android:textSize="12sp"
                android:maxLines="1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rating_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2.0"
                    android:textColor="@color/colorDarkGray"
                    android:layout_marginEnd="5dp"/>

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:stepSize="1.0"
                    android:rating="2.0"
                    android:isIndicator="true"
                    android:secondaryProgressTint="@color/colorGold"
                    style="@style/Widget.AppCompat.RatingBar.Small"/>

                <TextView
                    android:id="@+id/rating_users_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="140"
                    android:textColor="@color/colorDarkGray"
                    android:layout_marginEnd="5dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_person_dark_gray_24dp"
                    android:contentDescription="@string/person"/>

            </LinearLayout>
        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/bottom_sheet_taunt"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center|end"
            android:contentDescription="@string/more_details"
            android:src="@drawable/ic_keyboard_arrow_up_white_24dp"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:elevation="3dp"
            app:civ_fill_color="@color/colorPrimary"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_sheet_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:padding="10dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/bottom_sheet_toolbar_back_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_arrow_back_white_24dp"
            android:background="@color/colorTransparent"
            android:contentDescription="@string/back"
            android:layout_gravity="start|center_vertical"/>

        <TextView
            android:id="@+id/tv_toolbar_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:text="Nairobi West Gym"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"/>
    </LinearLayout>
</FrameLayout>
